# graphrag

./: .env.template  .gitignore  HEROKU_DEPLOYMENT.md  MAP_GENERATOR_GUIDE.md  Procfile  README.md  S3_STORAGE_GUIDE.md  app.json  cors_updates.md  direct_token_test.py  graphrag_api_postman_collection.json  pyproject.toml  requirements-dev.txt  requirements.txt  requirements.txt.bak  run_local_server.py  run_tests.py  setup.py  test_api.sh  test_local_llm.py  test_map.py  test_map_generator.py  test_map_visualizer.py  test_quest_extraction.py  test_server_changes.py  test_token_validation.py
.heroku/: python.toml
data/: authorized_emails.json  graphrag.db
data/documents/: Eryndor_Leafshade.docx  Kael_Thornstride.docx  Sylvara_Willowbark.docx  The_Ironroot_Range.docx
data/output/: game_actions.csv  game_characters.csv  game_items.csv  game_locations.csv  knowledge_graph.gexf
deployment/: deploy.sh  graphrag.service  gunicorn_config.py  nginx_graphrag.conf
elyria_world/locations/: Mt_Dorn.docx
elyria_world/races/: The_Treefolk.docx
output/debug/: debug_quests_debug.json  quests.csv  quests.json
src/: __init__.py  analyze_results.py  combat_system.py  debug_quest_extraction.py  debug_quest_processor.py  document_processor.py  document_quest_processor.py  enhanced_llm_game_engine.py  game_engine.py  game_integration.py  llm_clients.py  llm_integration.py  local_llm.py  local_llm_format.py  local_llm_game_engine.py  main.py  map_generator.py  quest_parser.py
src/api/: __init__.py  api_summary.md  api_utils.py  auth.py  auth_routes.py  auth_summary.md  game_session.py  models.py  redis_session.py  routes.py  server.py  session_persistence.py  test_api.py  user_routes.py  utils.py  world_routes.py
src/client/: __init__.py  admin.html  api_client.py  heroku_web_client.html  index.html  styles.css  web_client.html  world_admin.html
src/combat/: __init__.py  combat_system.py  entities.py
src/custom_types/: __init__.py  combat_types.py  game_state.py
src/engine/: __init__.py  command_processor.py  (+3 more)
(+112 files in other folders)
