[project]
name = "graphrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "colorama>=0.4.6",
    "matplotlib>=3.10.1",
    "networkx>=3.4.2",
    "pandas>=2.2.3",
    "pytest>=8.3.5",
    "python-docx>=1.1.2",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "ruff>=0.11.3",
    "spacy>=3.8.4",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[dependency-groups]
dev = [
    "pydeps>=3.0.1",
]
