[project]
name = "graphrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "matplotlib>=3.10.1",
    "networkx>=3.4.2",
    "pandas>=2.2.3",
    "python-docx>=1.1.2",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "ruff>=0.11.3",
    "spacy>=3.8.4",
    "tqdm>=4.67.1",
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
    "sqlalchemy>=2.0.0",
    "flask-sqlalchemy>=3.0.0",
    "flask-jwt-extended>=4.5.0",
    "passlib>=1.7.4",
    "email-validator>=2.0.0",
    "pyjwt>=2.10.0",
    # Heroku deployment dependencies
    "psycopg2-binary>=2.9.9",
    "gunicorn>=21.2.0",
    "boto3>=1.28.0",
    # Cloud LLM dependencies
    "huggingface-hub>=0.19.0",
    "transformers>=4.35.0",
    "accelerate>=0.25.0",
    "anthropic>=0.49.0",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "en-core-web-md @ https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.8.0/en_core_web_md-3.8.0-py3-none-any.whl",
    "en-core-web-lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl"
]
